[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Tools/Game.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Tools/CameraShake.gd" type="Script" id=2]
[ext_resource path="res://Scenes/MainMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Tools/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://Scenes/GameOverlay.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/World.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sprites/Helpers/White-1920x1080.png" type="Texture" id=7]
[ext_resource path="res://Scripts/RevealViewport.gd" type="Script" id=8]
[ext_resource path="res://Scripts/AreaGroup.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Splotch1.tscn" type="PackedScene" id=17]

[sub_resource type="CircleShape2D" id=2]
radius = 100.0

[sub_resource type="CircleShape2D" id=3]
radius = 100.0

[sub_resource type="Environment" id=1]
background_mode = 4
background_canvas_max_layer = 1
glow_levels/4 = true
glow_intensity = 5.06
glow_strength = 1.42
glow_blend_mode = 1
glow_bicubic_upscale = true
glow_high_quality = true

[node name="Game" type="Node2D"]
script = ExtResource( 1 )
_splotch1_scene = ExtResource( 17 )

[node name="GameStateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="FlowerLevelStateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="MainMenu" parent="." instance=ExtResource( 3 )]

[node name="GameOverlay" parent="." instance=ExtResource( 5 )]

[node name="EntityContainer" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 960, 540 )
current = true
script = ExtResource( 2 )

[node name="RevealViewport1" type="Viewport" parent="."]
size = Vector2( 1920, 1080 )
transparent_bg = true
disable_3d = true
usage = 0
render_target_v_flip = true
script = ExtResource( 8 )

[node name="White" type="Sprite" parent="RevealViewport1"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 960, 540 )
texture = ExtResource( 7 )

[node name="RevealViewport2" type="Viewport" parent="."]
size = Vector2( 1920, 1080 )
transparent_bg = true
disable_3d = true
usage = 0
render_target_v_flip = true
script = ExtResource( 8 )

[node name="White" type="Sprite" parent="RevealViewport2"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 960, 540 )
texture = ExtResource( 7 )

[node name="Flowers" type="Spatial" parent="."]

[node name="BackgroundContainer" type="ViewportContainer" parent="Flowers"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Viewport" type="Viewport" parent="Flowers/BackgroundContainer"]
size = Vector2( 1920, 1080 )
own_world = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="World" parent="Flowers/BackgroundContainer/Viewport" instance=ExtResource( 6 )]

[node name="RevealAreas" type="Node2D" parent="."]
z_index = 10

[node name="FlowerHills" type="Node2D" parent="RevealAreas"]
script = ExtResource( 9 )
_reveal_viewport_path = NodePath("../../RevealViewport1")

[node name="Area2D" type="Area2D" parent="RevealAreas/FlowerHills"]
position = Vector2( 119, 599 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RevealAreas/FlowerHills/Area2D"]
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="RevealAreas/FlowerHills"]
position = Vector2( 122, 834 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RevealAreas/FlowerHills/Area2D2"]
shape = SubResource( 2 )

[node name="Area2D3" type="Area2D" parent="RevealAreas/FlowerHills"]
position = Vector2( 330, 617 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RevealAreas/FlowerHills/Area2D3"]
shape = SubResource( 2 )

[node name="Area2D4" type="Area2D" parent="RevealAreas/FlowerHills"]
position = Vector2( 337, 859 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RevealAreas/FlowerHills/Area2D4"]
shape = SubResource( 2 )

[node name="Area2D5" type="Area2D" parent="RevealAreas/FlowerHills"]
position = Vector2( 556, 634 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RevealAreas/FlowerHills/Area2D5"]
shape = SubResource( 2 )

[node name="Area2D6" type="Area2D" parent="RevealAreas/FlowerHills"]
position = Vector2( 556, 848 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RevealAreas/FlowerHills/Area2D6"]
shape = SubResource( 2 )

[node name="Area2D7" type="Area2D" parent="RevealAreas/FlowerHills"]
position = Vector2( 756, 771 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RevealAreas/FlowerHills/Area2D7"]
shape = SubResource( 2 )

[node name="Area2D8" type="Area2D" parent="RevealAreas/FlowerHills"]
position = Vector2( 922, 636 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RevealAreas/FlowerHills/Area2D8"]
shape = SubResource( 2 )

[node name="Area2D9" type="Area2D" parent="RevealAreas/FlowerHills"]
position = Vector2( 1127, 670 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RevealAreas/FlowerHills/Area2D9"]
shape = SubResource( 2 )

[node name="Area2D10" type="Area2D" parent="RevealAreas/FlowerHills"]
position = Vector2( 1262, 511 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RevealAreas/FlowerHills/Area2D10"]
shape = SubResource( 2 )

[node name="Area2D11" type="Area2D" parent="RevealAreas/FlowerHills"]
position = Vector2( 1470, 577 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RevealAreas/FlowerHills/Area2D11"]
shape = SubResource( 2 )

[node name="FlowerTree" type="Node2D" parent="RevealAreas"]
script = ExtResource( 9 )
_reveal_viewport_path = NodePath("../../RevealViewport2")

[node name="Area2D" type="Area2D" parent="RevealAreas/FlowerTree"]
position = Vector2( 1146, 1023 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RevealAreas/FlowerTree/Area2D"]
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="RevealAreas/FlowerTree"]
position = Vector2( 1346, 983 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RevealAreas/FlowerTree/Area2D2"]
shape = SubResource( 2 )

[node name="Area2D3" type="Area2D" parent="RevealAreas/FlowerTree"]
position = Vector2( 1546, 959 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RevealAreas/FlowerTree/Area2D3"]
shape = SubResource( 2 )

[node name="Area2D4" type="Area2D" parent="RevealAreas/FlowerTree"]
position = Vector2( 1779, 978 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RevealAreas/FlowerTree/Area2D4"]
shape = SubResource( 2 )

[node name="Area2D5" type="Area2D" parent="RevealAreas/FlowerTree"]
position = Vector2( 1863, 756 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RevealAreas/FlowerTree/Area2D5"]
shape = SubResource( 2 )

[node name="Area2D6" type="Area2D" parent="RevealAreas/FlowerTree"]
position = Vector2( 1857, 564 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RevealAreas/FlowerTree/Area2D6"]
shape = SubResource( 2 )

[node name="Area2D7" type="Area2D" parent="RevealAreas/FlowerTree"]
position = Vector2( 1776, 389 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RevealAreas/FlowerTree/Area2D7"]
shape = SubResource( 2 )

[node name="Area2D8" type="Area2D" parent="RevealAreas/FlowerTree"]
position = Vector2( 1639, 616 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RevealAreas/FlowerTree/Area2D8"]
shape = SubResource( 2 )

[node name="Area2D9" type="Area2D" parent="RevealAreas/FlowerTree"]
position = Vector2( 1410, 632 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RevealAreas/FlowerTree/Area2D9"]
shape = SubResource( 2 )

[node name="RevealCursor" type="Node2D" parent="."]
z_index = 11

[node name="RevealCursorArea" type="Area2D" parent="RevealCursor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RevealCursor/RevealCursorArea"]
shape = SubResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )
